# libmustache

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile.am  README.md  Readme.md  appveyor.yml  ci.nix  configure.ac  data.cpp  data.hpp  default.nix  derivation.nix  exception.hpp  flake.nix  mustache.cpp  mustache.hpp  mustache.pc.in  nix-shell.sh  node.cpp  node.hpp  renderer.cpp  renderer.hpp  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.hpp
.github/workflows/: ci.yml  linux.yml
cmake/: mustache_config.h.in
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  libmustache.cron.d.ex  libmustache.default.ex  libmustache.doc-base.EX  libmustache1.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
doc/: Doxyfile  Makefile.am
m4/: stl_hash.m4
nix/: ci.nix  derivation.nix
src/: CMakeLists.txt  Makefile.am  compiler.cpp  compiler.hpp  data.cpp  data.hpp  lambda.hpp  mustache.cpp  mustache.hpp  mustache_config.h.in  node.cpp  node.hpp  renderer.cpp  renderer.hpp  stack.hpp  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.hpp  vm.cpp  vm.hpp
test/: CMakeLists.txt  Makefile.am  run  test_utils.cpp
test/fixtures/: deep.yml  lambdas.hpp  partial-a.mustache
test/spec/: CMakeLists.txt  Makefile.am  test_spec  test_spec.cpp  test_spec.hpp
tests/: CMakeLists.txt  Makefile.am  test_misc.cpp  test_spec.cpp  test_spec.hpp  test_utils.cpp
tests/fixtures/: complex.mustache  complex.yml  deep.mustache  lambdas.cpp  partial-b.mustache  partial.mustache  partial.yml  standard.yml
tests/spec/: CMakeLists.txt
